# scip-stubs

./: .allowlist  .pre-commit-config.yaml  README.md  check_method_order.py  debug.py  justfile  pyproject.toml  stub-choices.md
pyscipopt/: Multidict.pyi  __init__.pyi  benders.pyi  benderscut.pyi  branchrule.pyi  conshdlr.pyi  cutsel.pyi  event.pyi  expr.pyi  heuristic.pyi  lp.pyi  nodesel.pyi  presol.pyi  pricer.pyi  propagator.pyi  reader.pyi  relax.pyi  scip.pyi  sepa.pyi
pyscipopt-stubs/: __init__.pyi  scip.pyi
pyscipopt-stubs/recipes/: nonlinear.pyi  piecewise.pyi  primal_dual_evolution.pyi
pyscipopt/recipes/: infeasibilities.pyi  nonlinear.pyi  piecewise.pyi  primal_dual_evolution.pyi
src/pyscipopt-stubs/: Multidict.pyi  scip.pyi
src/pyscipopt-stubs/recipes/: getLocalConss.pyi  infeasibilities.pyi  nonlinear.pyi
tests/: expr.pyi  matrix.pyi
tests/accept/: column.py
tests/tutorials/: .ruff.toml  branchrule.py  constypes.py  cutselector.py  eventhandler.py  expressions.py  heuristic.py  lazycons.py  logfile.py  model.py  model.pyi  nodeselector.py  readwrite.py  separator.py  vartypes.py  vartypes.pyi
tool/: docstrings.py  method_order.py  stubtest.py
