[project]
name = "scip-stubs"
version = "5.3.0.0"
description = "Type annotations for PySCIPOpt"
readme = "README.md"
authors = [
    { name = "Jonathan Berthias", email = "jvberthias@gmail.com" }
]
requires-python = ">=3.8"

[project.optional-dependencies]
pyscipopt = [
    "pyscipopt>=5.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["pyscipopt"]

[dependency-groups]
dev = [
    "scip-stubs[pyscipopt]",
    "basedmypy[faster-cache]==2.9.1",
    "basedpyright==1.27.1",
]

[tool.pyright]
pythonVersion = "3.8"
typeCheckingMode = "basic"
enableTypeIgnoreComments = false
reportIgnoreCommentWithoutRule = true
reportIncompatibleMethodOverride = false
reportInvalidStubStatement = false
reportUnnecessaryTypeIgnoreComment = true
reportUnusedExpression = false
reportImplicitOverride = true

[tool.mypy]
disallow_any_explicit = false
disable_error_code = "comparison-overlap,misc"

[tool.ruff]
show-fixes = true
[tool.ruff.lint]
extend-select = ["I", "UP", "PYI"]
extend-ignore = [
    "PYI021", # let's keep the docstrings for now
]
[tool.ruff.lint.isort]
split-on-trailing-comma = false
[tool.ruff.format]
skip-magic-trailing-comma = true
